--- a/movies/pubspec.yaml
+++ b/movies/pubspec.yaml
@@ -37,15 +37,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   bloc: ^8.1.1
-  flutter_bloc: ^8.1.2
   equatable: ^2.0.5
   dio: ^5.0.2
   get_it: ^7.2.0
   injectable: ^2.1.0
   shared_preferences: ^2.0.15
-  logger: ^1.1.0
-  jiffy: ^5.0.0
-
+  flutter_bloc: ^8.1.2
+  carousel_slider: ^4.2.1
+  cached_network_image: ^3.2.3
+  favorite_button: ^0.0.4
 
 dev_dependencies:
   flutter_test:
