--- a/movies/pubspec.yaml
+++ b/movies/pubspec.yaml
@@ -46,6 +46,15 @@ dependencies:
   carousel_slider: ^4.2.1
   cached_network_image: ^3.2.3
   favorite_button: ^0.0.4
+  cloud_firestore: ^4.6.0
+  firebase_core: ^2.11.0
+  firebase_auth: ^4.5.0
+  logger: ^1.3.0
+  google_sign_in: ^6.1.0
+  firebase_messaging: ^14.5.0
+  flutter_vector_icons: ^2.0.0
+  flutter_rating_bar: ^4.0.1
+  jiffy: ^6.1.0
 
 dev_dependencies:
   flutter_test:
@@ -72,8 +81,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
